<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout

        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/balance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_300"
                android:textSize="32sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/balance_layout"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_400"
                        android:textStyle="bold"
                        android:textSize="26sp"
                        android:textColor="@color/green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        android:textSize="14sp"
                        android:textAllCaps="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar400"
                        android:textStyle="bold"
                        android:textSize="26sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:textSize="14sp"
                        android:textAllCaps="true"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/recyclerview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactions"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_below="@id/dashboard"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/recyclerview_title"
            android:layout_margin="10dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/add_transaction"
            android:src="@drawable/ic_add"
            android:backgroundTint="@color/red"
            app:tint="@color/white"
            app:borderWidth="0dp"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
