<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="add_transaction">Add transaction</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="label">Label</string>
    <string name="bananas">Bananas</string>
    <string name="_12">$12</string>
    <string name="total_balance">Total Balance</string>
    <string name="_300">$300</string>
    <string name="_400">$400</string>
    <string name="budget">Budget</string>
    <string name="dollar400">$400</string>
    <string name="expense">Expense</string>
    <string name="transactions">Transactions</string>
    <string name="update_transaction">Update Transaction</string>
</resources>